--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 script:
-  #- go list -f '{{range .XTestImports}}{{.}}{{"\n"}}{{end}}' ./... | xargs go get
+  - go get github.com/bmizerany/assert
   - go test -v
 go:
   - 1.2
